<resources>
    <string name="app_name">Magic 8 Ball</string>
    //Dialog
    <string name="d_title">Confirmation</string>
    //Login Page
    <string name="login">SIGN IN</string>
    <string name="text_reg">Not registered?</string>
    <string name="userhint">Username</string>
    <string name="passhint">Password</string>
    <string name="register">Create an account</string>
    //Register Page
    <string name="retype_passhint">Re-type Password</string>
    <string name="submit">CREATE</string>
    <string name="del">DELETE</string>
    <string name="signin">Already signed up? Sign in</string>
    <string name="required">This is a required field.</string>
    <string name="r_success">You are now registered.</string>
    <string name="r_error">Registration error.</string>
    <string name="user_taken">Username is already taken.</string>
    <string name="pword_match">Password does not match</string>
    <string name="asnwerAll">Answer all fields.</string>
    <string name="incorrect_pass">Incorrect password.</string>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="sdialogmessage">Are you sure you want to sign out?</string>
    <string name="sdialogtitle">Exit</string>
    <string name="signout">Signed out successfully</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="rdialogmessage">Are you sure you want to create this account?</string>
    <string name="ask">Ask me anything.</string>

</resources>
