<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#81C784"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="210dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/student"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/stroke_focus"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/userhint"
        android:digits="0123456789_qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/pass"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_focus"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/passhint"
        android:inputType="textPersonName"
        android:password="true"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/text_reg"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
</LinearLayout>